adding gatsby-args: --prefix-path to the deploy.yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,3 +13,4 @@ jobs:
            with:
               access-token: ${{ secrets.MY_ONLINE_PORTFOLIO }}
               deploy-branch: master
+              gatsby-args: --prefix-paths
