--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
            with:
               access-token: ${{ secrets.MY_ONLINE_PORTFOLIO }}
               deploy-branch: master
-              gatsby-args: --prefix-paths
+              gatsby-args: --prefix-paths && gh-pages -d public
