--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "18"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         id: pages
@@ -74,6 +74,8 @@ jobs:
             ${{ runner.os }}-gatsby-build-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Rebuild sharp
+        run: npm rebuild --verbose sharp
       - name: Build with Gatsby
         env:
           PREFIX_PATHS: 'true'
