--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -18,6 +18,7 @@ on:
 permissions:
   contents: read
   pages: write
+  deployments: write
   id-token: write
 
 # Allow one concurrent deployment
@@ -36,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -89,10 +90,14 @@ jobs:
 
   # Deployment job
   deploy:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
+    environment:
+          name: github-pages
+          url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v1
         with:
           deploy-branch: github-pages
