--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -83,7 +83,7 @@ jobs:
         env:
           PREFIX_PATHS: 'true'
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
-      - name: Upload artifact
+      - name: github-pages
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
