--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -7,9 +7,9 @@ name: Deploy Gatsby site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [main]
   pull_request:
-       branches: ["main"]
+       branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -83,8 +83,6 @@ jobs:
         env:
           PREFIX_PATHS: 'true'
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
-      - name: github-pages
-        uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
 
@@ -100,4 +98,5 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v1
         with:
-          deploy-branch: main
+          deploy-branch: gh-pages
+          prefixArgs: --prefix-paths && gh-pages -d public
