--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -7,9 +7,9 @@ name: Deploy Gatsby site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: [main]
+    branches: ["main"]
   pull_request:
-       branches: [main]
+       branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -98,5 +98,5 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v1
         with:
-          deploy-branch: gh-pages
+          deploy-branch: ["gh-pages"]
           prefixArgs: --prefix-paths && gh-pages -d public
