--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -8,8 +8,9 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+  # Runs when target pull request branch is the default branch
   pull_request:
-       branches: ["main"]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,7 +19,6 @@ on:
 permissions:
   contents: read
   pages: write
-  deployments: write
   id-token: write
 
 # Allow one concurrent deployment
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -83,20 +83,21 @@ jobs:
         env:
           PREFIX_PATHS: 'true'
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
 
   # Deployment job
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
-          name: github-pages
-          url: ${{ steps.deployment.outputs.page_url }}
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
         with:
           deploy-branch: ["gh-pages"]
-          prefixArgs: --prefix-paths && gh-pages -d public
