--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -90,11 +90,12 @@ jobs:
 
   # Deployment job
   deploy:
+    - name: Beginning deploy
+    needs: build
     environment:
-      name: github-pages
+      name: gh-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
