--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -90,10 +90,10 @@ jobs:
 
   # Deployment job
   deploy:
+  - name: Beginning of deploy
     needs: build
-    - name: Beginning of deploy
     environment:
-      name: gh-pages
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
