--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -97,11 +97,11 @@ jobs:
        - name: Use Node.js
          uses: actions/setup-node@v1
          with:
-           node-version: '12.x'
-       - uses: actions/download-artifact@v2
+           node-version: '18'
+       - uses: actions/download-artifact@v3
          with:
            name: Upload artifact
-           path: ./public
+           path: ./
        - run: npm install
        - run: npm run deploy
        - name: Deploy to GitHub Pages
